Reduced usage of superuser security context, simplified resolution of backend read access/visibilty and fixed behaviour of setProperty in UI commands

--- a/structr-ui/src/main/resources/structr/css/main.css
+++ b/structr-ui/src/main/resources/structr/css/main.css
@@ -449,7 +449,7 @@ img.disabled {
     margin: 0;
 }
 
-.props input {
+.props tr td.value input {
     margin: -3px;
     /*height: 1.7em;*/
     font-size: 8pt;
